--- a/UserBundle/Resources/views/User/ubahprofil.html.twig
+++ b/UserBundle/Resources/views/User/ubahprofil.html.twig
@@ -1,9 +1,17 @@
 {% extends "GMIUserBundle:User:usertemplate.html.twig" %}
 
+{%block css%}
+<style type="text/css">
+.rd{
+  color:red;
+}
+</style>
+{%endblock%}
+
 {% block form %}
 <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <form class="form-horizontal" role="form">
+      <form class="form-horizontal" role="form" action="#" method="POST">
         <fieldset>
 
           <!-- Form Name -->
@@ -13,7 +21,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="textinput">Nama</label>
             <div class="col-sm-10">
-              <input type="text" placeholder="Nama Anda" class="form-control" required="required">
+              <input type="text" placeholder="Nama Anda" class="form-control rd" name="name" value="{{app.user.name}}">
             </div>
           </div>
 
@@ -30,7 +38,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="textinput">Alamat</label>
             <div class="col-sm-10">
-              <input type="time" placeholder="Alamat" class="form-control" required="required" size="3">
+              <input type="time" placeholder="Alamat" class="form-control rd" name="address" value="{{app.user.address}}">
             </div>
           </div>
 
@@ -38,7 +46,7 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="textinput">Kota Asal</label>
             <div class="col-sm-10">
-              <input type="time" placeholder="Kota Asal" class="form-control" required="required">
+              <input type="time" placeholder="Kota Asal" class="form-control rd" name="town" value="{{app.user.town}}">
             </div>
           </div>
 
@@ -46,14 +54,13 @@
           <div class="form-group">
             <label class="col-sm-2 control-label" for="textinput">Kontak</label>
             <div class="col-sm-10">
-              <input type="time" placeholder="Nomor Telpon" class="form-control" required="required">
+              <input type="time" placeholder="Nomor Telpon" class="form-control rd" name="cp" value="{{app.user.cp}}">
             </div>
           </div>
 
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
               <div class="pull-right">
-                <button type="submit" class="btn btn-default">Cancel</button>
                 <button type="submit" class="btn btn-primary">Save</button>
               </div>
             </div>
