--- a/AdminBundle/Resources/views/Admin/member.html.twig
+++ b/AdminBundle/Resources/views/Admin/member.html.twig
@@ -1,18 +1,32 @@
-<table class="table table-responsive">
-	<thead>
-		<tr>
-			<th>No</th>
-			<th>Nama</th>
-			<th>CP</th>
-			<th>Opsi</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td>NULL</td>
-			<td>NULL</td>
-			<td>NULL</td>
-			<td>NULL</td>
-		</tr>
-	</tbody>
-</table>
+{% extends "GMIAdminBundle:Admin:admintemplate.html.twig" %}
+
+{% block content %}
+<legend><center>Daftar Anggota</center></legend>
+
+<div class="row col-md-10 col-md-offset-1 custyle">
+    <table class="table table-striped custab">
+        <thead>
+            <tr>
+                <th>#</th>
+                <th>Nama</th>
+                <th>Gender</th>
+                <th>Alamat</th>
+                <th>No Telp</th>
+                <th class="text-center">Action</th>
+            </tr>
+        </thead>
+        <tbody>
+            {%for i in member%}
+            <tr>
+                <td>{{loop.index}}</td>
+                <td>{{i.name}}</td>
+                <td>{{i.sex}}</td>
+                <td>{{i.address}}</td>
+                <td>{{i.cp}}</td>
+                <td class="text-center"><a href="{{path('delete_member', {'id' :i.Id})}}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
+            </tr>
+            {%endfor%}
+        </tbody>
+    </table>
+</div>
+{% endblock %}
