hal user completed

--- a/AdminBundle/Resources/views/Admin/laporan.html.twig
+++ b/AdminBundle/Resources/views/Admin/laporan.html.twig
@@ -2,7 +2,12 @@
 
 {% block content %}
 <legend><center>Dana Terkumpul</center></legend>
+
 <div class="row col-md-10 col-md-offset-1 custyle">
+    <br class="break"/>
+    Total : Rp. {{jlh|number_format}}
+    <br class="break">
+    <br class="break">
     <table class="table table-striped custab">
         <thead>
             <tr>
