--- a/AdminBundle/Resources/views/Admin/inbox.html.twig
+++ b/AdminBundle/Resources/views/Admin/inbox.html.twig
@@ -24,7 +24,7 @@
                 <td>{{i.tanggal|date('d-m-Y')}} {{i.waktu|date('h:i')}}</td>
                 <td>{{i.resi}}</td>
                 <td>{{i.nominal|number_format}}</td>
-                <td class="text-center"><a class='btn btn-info btn-xs' href="{{path('edit_inbox', {'id':i.Id})}}"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="{{path('delete_inbox', {'id':i.Id})}}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
+                <td class="text-center"><a class='btn btn-info btn-xs' href="{{path('edit_inbox', {'id':i.Id})}}"><span class="glyphicon glyphicon-edit"></span> Conf</a> <a href="{{path('delete_inbox', {'id':i.Id})}}" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
             </tr>
             {%endfor%}
         </tbody>
