--- a/UserBundle/Resources/views/User/donasisaya.html.twig
+++ b/UserBundle/Resources/views/User/donasisaya.html.twig
@@ -17,24 +17,30 @@
 {%endblock%}
 
 {%block form%}
+<legend><center>Donasi Saya</center></legend>
 <div class="row col-md-6 col-md-offset-3 custyle">
+    <br class="break"/>
+    Total : Rp. {{total|number_format}},-
+    <br class="break">
     <table class="table table-striped custab">
     <thead>
         <tr>
             <th>#</th>
             <th>Bank</th>
-            <th>Nominal</th>
+            <th>Nominal(Rp)</th>
             <th>No.Referensi</th>
-            <th class="text-center">Action</th>
+            <th class="text-center">Status</th>
         </tr>
     </thead>
+            {%for i in donasi%}
             <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td class="text-center"><a class='btn btn-info btn-xs' href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a> <a href="#" class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span> Del</a></td>
+                <td>{{loop.index}}</td>
+                <td>{{i.bank}}</td>
+                <td>{{i.nominal|number_format}}</td>
+                <td>{{i.resi}}</td>
+                <td class="text-center"><a class='btn btn-info btn-xs'><span class="glyphicon glyphicon-check"></span> Sukses</a></td>
             </tr>
+            {%endfor%}
     </table>
 </div>
 {%endblock%}
