--- a/UserBundle/Resources/views/Default/Template.html.twig
+++ b/UserBundle/Resources/views/Default/Template.html.twig
@@ -15,9 +15,10 @@
                 font-family: "trebuchet ms", sans-serif;    
             }
             .item{
-                background: #333;    
-                text-align: center;
-                height: 300px !important;
+                /*background: #333;    
+                text-align: center;*/
+                height: 300px;
+                width: 1200px
                 
             }
             .carousel{
@@ -35,7 +36,7 @@
             }
             #berita{
                 background:#ECF0F1;
-                height: 400px;
+                //height: 400px;
             }
             
         </style>
@@ -80,67 +81,21 @@
               </div><!-- /.container-fluid -->
             </nav>
 
-        <div class="slides">
+            <div class="header">
                 <div class="col-md-1"></div>
                 <div class="col-md-10">
-                    <div class="bs-example">
-                        <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
-                            <!-- Carousel indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                                <li data-target="#myCarousel" data-slide-to="1"></li>
-                                <li data-target="#myCarousel" data-slide-to="2"></li>
-                            </ol>   
-                            <!-- Carousel items -->
-                            <div class="carousel-inner">
-                                <div class="active item">
-                                    <center><img src="{{asset('bundles/gmiuser/slider/img1.png')}}" class="img-responsive"></center>
-                                    <div class="carousel-caption">
-                                        <h3></h3>
-                                        <p></p>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <img src="{{asset('bundles/gmiuser/slider/img2.jpg')}}" class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3></h3>
-                                        <p></p>
-                                    </div>
-                                </div>
-                                <div class="item">
-                                    <img src="{{asset('bundles/gmiuser/slider/img3.jpg')}}" class="img-responsive">
-                                    <div class="carousel-caption">
-                                        <h3></h3>
-                                        <p></p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <center><img src="{{asset('bundles/gmiuser/slider/img1.png')}}" class="img-responsive item"></center><br class="break" />
                 </div>
                 <div class="col-md-1"></div>
             </div>
-            <br class="break" />
+            
 
         <div class="container">
             <br class="break" />
-            <div class="footer">
-                <hr>
-                <p class="muted pull-center">© 2014 Gereja Methodist Indonesia Cabang-Medan.</p>
-            </div>
         </div>
 
-            <div class="icon">
-                <center>
-                    <br class="break" />
-                    <table class="table-responsive nav-bottom">
-                        <tr>
-                            <td><a href="#"><img src="{{asset('bundles/gmiuser/icon/fb.png')}}" class="img-responsive"></a></td>
-                            <td><a href="#"><img src="{{asset('bundles/gmiuser/icon/twt.png')}}" class="img-responsive"></a></td>
-                            <td><a href="#"><img src="{{asset('bundles/gmiuser/icon/gplus.png')}}" class="img-responsive"></a></td>
-                        </tr>
-                    </table>
-                </center>
+            <div class="content icon">
+                
             </div>
             <br class="break" />
 
@@ -148,20 +103,41 @@
                 <div class="row">
                     <div class="col-md-1"></div>
                     <div class="col-md-10" id="berita">
-                        <legend>Berita</legend>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
+                        <legend><center>Berita</center></legend>
+                        {% for item in berita %}
+                        <div class="col-md-6 col-md-offset-0">
+                            <div class="judul-berita"><b>{{ item.judul }}</b></div>
+                            <div class="tanggal-berita"><b><font color="red">{{ item.tanggal|date('d-M-Y') }}</font></b></div>
+                            <div class="deskripsi-berita">
+                            {% set isi = item.isi|split(" ") %}
+                            {% for i in 0..50 %}
+                                {{ isi[i]|raw }}
+                            {% endfor %} 
+                            </div><br>
+                            <div style="text-align: right"><a href="#">Selengkapnya &raquo;</a></div>
+                        </div>
+                        {%endfor%}
                     </div>
                     <div class="col-md-1"></div>
                 </div>
+            </div>
+            <br class="break">
+            <div class="container-fluid">
+            <div class="row col-md-12 col-md-offset-4">
+                <ul class="nav navbar-tab navbar-nav">
+                  <li><a href="http://www.facebook.com/templatemo"><img src="{{asset('bundles/gmiuser/icon/fb.png')}}"> </a></li>
+                  <li><a href="http://www.facebook.com/templatemo"><img src="{{asset('bundles/gmiuser/icon/twt.png')}}"> </a></li>
+                  <li><a href="http://www.facebook.com/templatemo"><img src="{{asset('bundles/gmiuser/icon/gplus.png')}}"> </a></li>
+                </ul>
+            </div></div>
+
+            <div class="container-fluid icon">
+                <br class="break" />
+                <hr>
+                <center>
+                <font color="white">
+                <p\>© 2014 Tugas Akhir Proyek - Mikroskil.</p>
+                </font></center>
             </div>
     <script type="text/javascript" src="{{asset('bundles/gmiuser/js/bootstrap-modal.js')}}"></script>
     <script type="text/javascript" src="{{asset('bundles/gmiuser/js/jquery.min.js')}}"></script>
