--- a/AdminBundle/Resources/views/Admin/adminhome.html.twig
+++ b/AdminBundle/Resources/views/Admin/adminhome.html.twig
@@ -1,5 +1,10 @@
 {% extends "GMIAdminBundle:Admin:admintemplate.html.twig" %}
 
 {% block content %}
-<center>Selamat Datang di Halaman Admin</center>
+<legend><center>Selamat Datang di Halaman Admin</center></legend>
+<div class="header">
+    <div class="col-md-8 col-md-offset-2">
+        <center><img src="{{asset('bundles/gmiuser/image/admin tools.png')}}" class="img-responsive item"></center><br class="break" />
+    </div>
+</div>
 {% endblock %}
