--- a/AdminBundle/Resources/views/Admin/admintemplate.html.twig
+++ b/AdminBundle/Resources/views/Admin/admintemplate.html.twig
@@ -116,7 +116,14 @@
 
         {% block content %}
         {% endblock %}
+        <br><br><br><br><br>
+        <div class="container">
 
+            <div class="footer col-md-10 col-md-offset-1">
+                <hr>
+                <p class="muted pull-center">© 2014 Gereja Methodist Indonesia Cabang-Medan.</p>
+            </div>
+        </div>
     <script type="text/javascript" src="{{asset('bundles/gmiuser/js/jquery.min.js')}}"></script>
     <script type="text/javascript" src="{{asset('bundles/gmiuser/js/bootstrap.min.js')}}"></script>
     </body>
