--- a/AdminBundle/Resources/views/Admin/jadwal.html.twig
+++ b/AdminBundle/Resources/views/Admin/jadwal.html.twig
@@ -27,7 +27,7 @@
             </tr>
             <tr>
                 <td>No. Telp</td>
-                <td><input type="number" name="cp" size="70" required="required"></td>
+                <td><input type="text" name="cp" size="70" required="required"></td>
             </tr>
             <tr>
                 <td></td>
