--- a/UserBundle/Resources/views/Default/index.html.twig
+++ b/UserBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,8 @@
-Hello {{ name }}!
+{% extends "GMIUserBundle:Default:Template.html.twig" %}
+
+{% block content %}
+<div class="col-md-12 hd">
+<div class="col-md-10 col-md-offset-1">
+<h3><center>Selamat Datang di Website Official GMI Krakatau</center></h3>
+</div></div>
+{% endblock %}
