--- a/UserBundle/Resources/views/User/userhome.html.twig
+++ b/UserBundle/Resources/views/User/userhome.html.twig
@@ -1,5 +1,10 @@
 {% extends "GMIUserBundle:User:usertemplate.html.twig" %}
 
 {% block content %}
-<center>Selamat Datang di Halaman User</center>
+<legend><center>Selamat Datang di Halaman User</center></legend>
+<div class="image">
+    <div class="col-md-8 col-md-offset-2">
+        <center><img src="{{asset('bundles/gmiuser/image/Large group.png')}}" class="img-responsive item img-circle"></center><br class="break" />
+    </div>
+</div>
 {% endblock %}
